version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/ExternalData/ImportSettingsBase.rst.txt
.. vale off



:class:`ImportSettingsBase`
===========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.ExternalData.ImportSettingsBase

   Bases: :py:obj:`object`


   
   A base class for Table import settings.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ImportSettingsBase

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Format`
            - Gets the existing corresponding format.







Property detail
---------------
.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!







.. vale on